logs/2023-12-05-13-45-12/clientbuild.log
main.c: In function ‘main’:
main.c:93:33: error: ‘reply’ undeclared (first use in this function)
   93 |                                 reply =  read_reply(sock_ctl);
      |                                 ^~~~~
main.c:93:33: note: each undeclared identifier is reported only once for each function it appears in
ftpClient.c: In function ‘ftpclient_read_cmd’:
ftpClient.c:61:9: warning: implicit declaration of function ‘read_input’; did you mean ‘readlinkat’? [-Wimplicit-function-declaration]
   61 |         read_input(buf,size);
      |         ^~~~~~~~~~
      |         readlinkat
ftpClient.c: In function ‘ftpclient_list’:
ftpClient.c:180:33: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘ssize_t’ {aka ‘long int’} [-Wformat=]
  180 |                 printf("list s:%d\n",s);
      |                                ~^    ~
      |                                 |    |
      |                                 int  ssize_t {aka long int}
      |                                %ld
ftpClient.c: In function ‘ftpclient_pasv’:
ftpClient.c:210:25: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘ssize_t’ {aka ‘long int’} [-Wformat=]
  210 |         printf("list s:%d\n",s);
      |                        ~^    ~
      |                         |    |
      |                         int  ssize_t {aka long int}
      |                        %ld
